--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Itayi Athanas | Electronics & Computer Engineer</title>
+  <title>Itayi Mutare | Electronics & Computer Engineer</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Roboto+Mono:wght@300;400;500&display=swap" rel="stylesheet">
   <style>
@@ -841,7 +841,7 @@
     <div class="container header-container">
       <a href="#" class="logo">
         <i class="fas fa-microchip"></i>
-        <span>Itayi Athanas</span>
+        <span>Itayi Mutare</span>
       </a>
       <button class="mobile-toggle" id="mobileToggle">
         <i class="fas fa-bars"></i>
@@ -861,7 +861,7 @@
   <section class="hero" id="home">
     <div class="container hero-content">
       <div class="hero-text">
-        <h1>Itayi Athanas</h1>
+        <h1>Itayi Mutare</h1>
         <div class="title">Electronics & Computer Engineer</div>
         <p>Graduate with hands-on experience in digital design, embedded systems, and control systems. Specializing in hardware-software solutions for automotive and robotics applications, with a focus on camera-based systems and real-time performance.</p>
         <div class="cta-buttons">
@@ -1073,7 +1073,8 @@
               <span class="tech-tag">Webots</span>
               <span class="tech-tag">CARLA</span>
             </div>
-            <a href="#" class="btn btn-outline">View Details</a>
+            <!-- Updated project button with actual link -->
+            <a href="https://github.com/yourusername/lane-keeping-system" target="_blank" class="btn btn-outline">View Details</a>
           </div>
         </div>
         <div class="project-card">
@@ -1089,7 +1090,8 @@
               <span class="tech-tag">PID Control</span>
               <span class="tech-tag">Embedded Systems</span>
             </div>
-            <a href="#" class="btn btn-outline">View Details</a>
+            <!-- Updated project button with actual link -->
+            <a href="https://github.com/yourusername/autonomous-robot" target="_blank" class="btn btn-outline">View Details</a>
           </div>
         </div>
         <div class="project-card">
@@ -1105,7 +1107,8 @@
               <span class="tech-tag">Digital Logic</span>
               <span class="tech-tag">FSM</span>
             </div>
-            <a href="#" class="btn btn-outline">View Details</a>
+            <!-- Updated project button with actual link -->
+            <a href="https://github.com/yourusername/vhdl-designs" target="_blank" class="btn btn-outline">View Details</a>
           </div>
         </div>
       </div>
@@ -1126,7 +1129,8 @@
             </div>
             <div>
               <h4>Email</h4>
-              <p>contact@itayathanas.dev</p>
+              <!-- Updated email address -->
+              <p>eng.mutare@gmail.com</p>
             </div>
           </div>
           <div class="contact-item">
@@ -1144,20 +1148,22 @@
             </div>
             <div>
               <h4>Phone</h4>
-              <p>+48 XXX XXX XXX</p>
+              <!-- Updated phone number -->
+              <p>+48 518 920 657</p>
             </div>
           </div>
           <div class="social-links">
-            <a href="#" class="social-link">
+            <!-- Updated social media links with actual URLs -->
+            <a href="https://github.com/yourusername" target="_blank" class="social-link">
               <i class="fab fa-github"></i>
             </a>
-            <a href="#" class="social-link">
+            <a href="https://linkedin.com/in/yourusername" target="_blank" class="social-link">
               <i class="fab fa-linkedin-in"></i>
             </a>
-            <a href="#" class="social-link">
+            <a href="https://twitter.com/yourusername" target="_blank" class="social-link">
               <i class="fab fa-twitter"></i>
             </a>
-            <a href="#" class="social-link">
+            <a href="your-resume.pdf" target="_blank" class="social-link">
               <i class="fas fa-file-pdf"></i>
             </a>
           </div>
@@ -1188,7 +1194,8 @@
   <!-- Footer -->
   <footer>
     <div class="container">
-      <p>&copy; 2024 Itayi Athanas. All Rights Reserved.</p>
+      <!-- Updated copyright year -->
+      <p>&copy; 2026 Itayi Mutare. All Rights Reserved.</p>
       <p>Electronics & Computer Engineering Portfolio</p>
     </div>
   </footer>
