--- a/index.html
+++ b/index.html
@@ -917,12 +917,7 @@
         </div>
       </div>
       <div class="hero-image">
-        <div class="profile-img">
-          <!-- Placeholder for profile image with gradient -->
-          <div style="width: 100%; height: 400px; background: linear-gradient(135deg, #1e3c72, #2a5298, #06b6d4); border-radius: 20px; display: flex; align-items: center; justify-content: center; color: white; font-size: 4rem; position: relative; overflow: hidden;">
-            <i class="fas fa-user-cog"></i>
-            <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(45deg, transparent 30%, rgba(255, 255, 255, 0.1) 50%, transparent 70%); animation: shine 3s infinite linear;"></div>
-          </div>
+        <img src="images/itayi.jpg" alt="Itayi Mutare" class="profile-img">
         </div>
       </div>
     </div>
