--- a/index.html
+++ b/index.html
@@ -1192,14 +1192,14 @@
           </div>
           <div class="social-links">
             <!-- Updated social media links with actual URLs -->
-            <a href="https://github.com/yourusername" target="_blank" class="social-link">
+            <a href="https://github.com/engmutare" target="_blank" class="social-link">
               <i class="fab fa-github"></i>
             </a>
-            <a href="https://linkedin.com/in/yourusername" target="_blank" class="social-link">
+            <a href="https://linkedin.com/in/athanas-mutare-a63381224" target="_blank" class="social-link">
               <i class="fab fa-linkedin-in"></i>
             </a>
-            <a href="https://twitter.com/yourusername" target="_blank" class="social-link">
-              <i class="fab fa-twitter"></i>
+            <a href="https://facebook.com/AthanasMutare" target="_blank" class="social-link">
+              <i class="fab fa-facebook-f"></i>
             </a>
             <a href="your-resume.pdf" target="_blank" class="social-link">
               <i class="fas fa-file-pdf"></i>
